testsuite/poke.pkl/union-diag-6.pk
/* { dg-do compile } */

/* Declarations are only allowed in unions if they appear before any
   of the alternatives. */

defun pred = int: { return 0; }

deftype Foo = union
 {
   int bar : pred;
   deftype je = int[bar]; /* { dg-error "" } */
   int jorl;
 };
